# adam_core

./: .cursorrules  .gitignore  .pdm-python  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README.md  README_GRID_TESTING.md  REFERENCES.md  adam_core_rust_migration_review_handoff_2026-04-27.md  conftest.py  decisions.md  docker-compose.yml  generate_test_data.py  journal.md  porkchops.ipynb  pyproject.toml  setup.cfg  test_grid.py  test_grid_quick.py
.beads/: metadata.json
.cargo/: config.toml
.github/workflows/: docker-build-lint-test.yml  docker_cleanup.yml  lint.yml  nightly-rust-benchmark.yml  pip-build-lint-test-coverage.yml  publish-crates.yml  publish.yml  release-candidate-wheel-matrix.yml  rust-crate-release-candidate.yml  tier1-dependent-smoke.yml
adam_core/: __init__.py  constants.py  ray_cluster.py
adam_core/backend/: __init__.py  backend.py  pyoorb.py
adam_core/coordinates/: __init__.py  cartesian.py  cometary.py  conversions.py  coordinates.py  covariances.py  frame.py  io.py  jacobian.py  keplerian.py  members.py  origin.py  residuals.py  spherical.py  times.py  transform.py  types.py  variants.py
adam_core/dynamics/: __init__.py  aberrations.py  barker.py  ephemeris.py  impacts.py  kepler.py  lagrange.py  moid.py  propagation.py  tisserand.py
adam_core/observations/: __init__.py  ades.py  associations.py  detections.py  exposures.py
adam_core/observers/: __init__.py  observers.py  state.py
adam_core/orbit_determination/: __init__.py  differential_correction.py  fitted_orbits.py  outliers.py
adam_core/orbits/: __init__.py  classification.py  ephemeris.py  impacts.py  orbits.py  variants.py
adam_core/propagator/: __init__.py  propagator.py  pyoorb.py  utils.py
adam_core/tests/: test_imports.py  test_ray_cluster.py
adam_core/time/: __init__.py  time.py
adam_core/utils/: __init__.py  astropy.py  indexable.py  mpc.py  multiprocessing.py  spice.py
data/orbit_fit_eval/: mpc_observations.parquet  mpc_orbits.parquet  neocc_orbits.parquet  sbdb_orbits.parquet
dev/bench/: data.js
docs/: .gitignore  codex-handoff.md  generate_rotation_period_2025_mm81_gallery.py  generate_rotation_period_plotly_gallery.py  generate_rotation_period_x05_gallery.py  rotation_period_validation.md
docs/source/: conf.py  index.rst  non_grav_support.rst
examples/: 2024_yr4_impact_risk.ipynb  extended_covariance_verification.ipynb  introduction.ipynb  mpc_sbn_with_bigquery.ipynb  non_grav_support_walkthrough.ipynb  orbit_fitter_example.ipynb  preview_orbit.ipynb  pull_od_sample_data.ipynb  solved_state_covariance_verification.ipynb  track_neo.ipynb  viz_od_sample_data.ipynb
migration/: HANDOFF_2026-04-16.md  HANDOFF_2026-05-05.md  PLAN.md  TODO.md  adam_assist_rebound_ci_handoff_2026-05-18.md  adam_core_rust_surface_gap_report_2026-05-15.md  benchmark_governance.md  generate_ephemeris_2body_plan.md  iod_platform_numerics_2026-07-15.md  packaging.md  remaining_rust_surface.md  review_task_backlog_2026-04-28.md  roadmap.md  rust_native_data_model_rfc_2026-05-15.md  spicekit_extraction_plan.md  standalone_rust_surface_roadmap_2026-05-15.md  standalone_rust_surface_status.json  time_scale_strategy_spike_2026-05-15.md  waiver_schema.md  waivers.yaml
migration/artifacts/: adam_core_public_surface_inventory_2026-05-15.json  ades_parity_fixture_2026-07-05.json  assist_impacts_benchmark_2026-07-03.json  assist_public_semantics_benchmark_2026-05-20.json  assist_public_semantics_benchmark_2026-05-26.json  assist_public_semantics_covariance_benchmark_2026-06-20.json  assist_public_semantics_fixture_2026-05-20.json  assist_public_semantics_residuals_2026-05-20.json  bandpass_parity_fixture_2026-07-06.json  calc_mean_motion_bench.json  clean_room_acceptance.json  clean_room_acceptance_macos_arm64_matrix.json  clean_room_acceptance_macos_arm64_py311.json  clean_room_acceptance_macos_arm64_py312.json  clean_room_acceptance_macos_arm64_py313.json  clean_room_ephemeris_matrix.json  complete_performance_table.md  departure_spherical_fixture_2026-07-12.json  (+39 more)
rust/adam_core/: Cargo.toml
rust/adam_core/src/: lib.rs
rust/adam_core_py/: Cargo.toml
rust/adam_core_py/src/: bandpass_vendor.rs  coordinate_ops.rs  coordinates.rs  dynamics.rs  horizons.rs  http.rs  lib.rs  native_benchmarks.rs  obs80.rs  od_ops.rs  orbit_determination.rs  photometry.rs  query_clients.rs  rotation_observations.rs  rotation_period.rs  spice.rs  timestamp_ops.rs  trajectory.rs  variant_ephemeris.rs
rust/adam_core_rs_assist/: Cargo.toml  README.md  pyproject.toml
rust/adam_core_rs_assist/python/adam_assist_rust/: __init__.py  _arrow.py
rust/adam_core_rs_assist/python/tests/: conftest.py  test_adam_assist_rust_arrow_contract.py  test_adam_assist_rust_covariance.py  test_adam_assist_rust_ephemeris.py  test_adam_assist_rust_impacts.py  test_adam_assist_rust_od.py  test_adam_assist_rust_public_semantics.py  test_adam_assist_rust_typed_mapping.py
rust/adam_core_rs_assist/src/: lib.rs  python.rs
rust/adam_core_rs_coords/: Cargo.toml
rust/adam_core_rs_coords/examples/: propagation_bench.rs
rust/adam_core_rs_coords/src/: abs_mag.rs  ades_io.rs  bandpasses.rs  c2k_macos.rs  chi2.rs  classification.rs  coordinate_frame.rs  ephemeris.rs  generic.rs  healpix.rs  lambert.rs  lib.rs  moid.rs  mpc_designations.rs  obs80.rs  observations.rs  oem_io.rs  openspace.rs  orbit_least_squares.rs  orbit_propagation.rs  photometry.rs  propagate.rs  propagation.rs  query.rs  residuals.rs  rotation_period.rs  spherical_resid.rs  tisserand.rs  trajectory.rs  translation.rs  variant_sampling.rs  weighted.rs
rust/adam_core_rs_coords/src/propagation/: diagnostics.rs  ephemeris.rs  od.rs  pipeline.rs  request.rs  tests.rs  two_body.rs
rust/adam_core_rs_coords/src/types/: arrow.rs  mod.rs  origin.rs  time.rs
rust/adam_core_rs_kernel_data/: Cargo.toml  README.md
rust/adam_core_rs_kernel_data/examples/: resolve_all.rs
rust/adam_core_rs_kernel_data/src/: lib.rs
rust/adam_core_rs_spice/: Cargo.toml
rust/adam_core_rs_spice/src/: lib.rs  spk_product.rs
(+4251 files in other folders)
