[project]
name = "adam_core"
dynamic = ["version"]
authors = [
  { name = "Kathleen Kiker", email = "kathleen@b612foundation.org" },
  { name = "Alec Koumjian", email = "alec@b612foundation.org" },
  { name = "Joachim Moeyens", email = "moeyensj@uw.edu" },
  { name = "Spencer Nelson", email = "spencer@b612foundation.org" },
  { name = "Nate Tellis", email = "nate@b612foundation.org" },
]
description = "Core libraries for the ADAM platform"
readme = "README.md"
requires-python = ">=3.11,<3.13"
classifiers = [
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
license = { file = "LICENSE.md" }

keywords = ["astronomy", "orbital mechanics", "propagation"]

dependencies = [
  "astropy",
  "astroquery",
  "healpy",
  "jax",
  "jaxlib",
  "numba",
  "numpy>=2.0.0",
  "pdm",
  "pyarrow>=13.0.0",
  "pandas",
  "ray",
  "requests",
  "scipy",
  "spiceypy",
  "quivr>=0.7.5",
  "mpc-obscodes",
  "naif-de440",
  "naif-leapseconds",
  "naif-eop-high-prec",
  "naif-eop-predict",
  "naif-eop-historical",
  "naif-earth-itrf93",
  "timezonefinder",
]

[project.optional-dependencies]
plots = [
    "geopandas>=1.0.1",
    "plotly>=5.24.1",
    "nbformat>=4.2.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
[project.urls]
"Documentation" = "https://github.com/B612-Asteroid-Institute/adam_core#README.md"
"Issues" = "https://github.com/B612-Asteroid-Institute/adam_core/issues"
"Source" = "https://github.com/B612-Asteroid-Institute/adam_core"


[dependency-groups]
test = [
    "pytest-benchmark",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-mock",
    "pytest",
    "isort",
    "mypy",
    "ruff",
    "black",
    "adam-assist>=0.2.3",
    "ipython>=8.32.0",
    "ipykernel>=6.29.5",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 110
target-version = "py311"
lint.ignore = []
exclude = ["build"]

[tool.pdm.build]
includes = ["src/adam_core/"]

[tool.pdm.version]
source = "scm"
write_to = "adam_core/_version.py"
write_template = "__version__ = '{}'"


[tool.pdm.scripts]
check = { composite = ["lint", "typecheck", "test"] }
format = { composite = ["black ./src/adam_core", "isort ./src/adam_core"] }
lint = { composite = [
  "ruff check ./src/adam_core",
  "black --check ./src/adam_core",
  "isort --check-only ./src/adam_core",
] }
fix = "ruff check ./src/adam_core --fix"
typecheck = "mypy --strict ./src/adam_core"

test = "pytest --benchmark-skip -m 'not profile' {args}"
doctest = "pytest --doctest-plus --doctest-only"
benchmark = "pytest --benchmark-only {args}"
coverage = "pytest --benchmark-skip --cov=adam_core --cov-report=xml -m 'not profile' {args}"
