[project]
name = "adam_core"
dynamic = ["version"]
authors = [
  { name = "Kathleen Kiker", email = "kathleen@b612foundation.org" },
  { name = "Alec Koumjian", email = "alec@b612foundation.org" },
  { name = "Joachim Moeyens", email = "moeyensj@uw.edu" },
  { name = "Spencer Nelson", email = "spencer@b612foundation.org" },
  { name = "Nate Tellis", email = "nate@b612foundation.org" },
]
description = "Core libraries for the ADAM platform"
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
license = { file = "LICENSE.md" }

keywords = ["astronomy", "orbital mechanics", "propagation"]

dependencies = [
  "astropy",
  "astroquery",
  "healpy",
  # jaxlib cpu is only available for macos x86_64 <=0.4.38
  "jax>=0.4.23,<=0.4.38; platform_system == 'Darwin' and platform_machine == 'x86_64'",
  "jax; platform_system != 'Darwin' or platform_machine != 'x86_64'",
  "jaxlib>=0.4.23,<=0.4.38; platform_system == 'Darwin' and platform_machine == 'x86_64'",
  "jaxlib; platform_system != 'Darwin' or platform_machine != 'x86_64'",
  "numba",
  "numpy>=2.0.0",
  "pdm",
  "pyarrow>=13.0.0",
  "pandas",
  "ray",
  "requests",
  "scipy",
  "quivr>=0.8.1",
  "mpc-obscodes",
  "naif-de440",
  "naif-leapseconds",
  "naif-eop-high-prec",
  "naif-eop-predict",
  "naif-eop-historical",
  "naif-earth-itrf93",
  "timezonefinder",
]

[project.optional-dependencies]
plots = [
    "geopandas>=1.0.1",
    "plotly>=5.24.1",
    "nbformat>=4.2.0",
    "matplotlib>=3.10.1",
]
oem = [
    "oem>=0.4.5",
]
docs = [
    "sphinx>=8.2.0,<9.0.0",
    "furo>=2024.8.6",
    "myst-nb>=1.3.0",
    "nbformat>=5.10.4",
    "matplotlib>=3.10.1",
    "plotly>=5.24.1",
    "geopandas>=1.0.1",
    "oem>=0.4.5",
    "sphinx-copybutton>=0.5.2",
    "sphinx-sitemap>=2.8.0",
]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"
[project.urls]
"Documentation" = "https://github.com/B612-Asteroid-Institute/adam_core#README.md"
"Issues" = "https://github.com/B612-Asteroid-Institute/adam_core/issues"
"Source" = "https://github.com/B612-Asteroid-Institute/adam_core"


[dependency-groups]
test = [
    "pytest-benchmark",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-mock",
    "pytest-xdist",
    "pytest",
    "isort",
    "mypy",
    "ruff",
    "black",
    "adam-assist>=0.3.5",
    "mpcq>=0.4.0; python_version < '3.13'",
    "google-cloud-bigquery",
    "google-cloud-bigquery-storage",
    "ipython>=8.32.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "geopandas>=1.0.1",
    "plotly>=5.24.1",
    "nbformat>=4.2.0",
    "oem>=0.4.5",
    "maturin>=1.7,<2",
]
docs = [
    "sphinx>=8.2.0,<9.0.0",
    "furo>=2024.8.6",
    "myst-nb>=1.3.0",
    "nbformat>=5.10.4",
    "matplotlib>=3.10.1",
    "plotly>=5.24.1",
    "geopandas>=1.0.1",
    "oem>=0.4.5",
    "sphinx-copybutton>=0.5.2",
    "sphinx-sitemap>=2.8.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
norecursedirs = ["__pypackages__"]

[tool.ruff]
line-length = 110
target-version = "py311"
lint.ignore = []
exclude = ["build"]

[tool.pdm.build]
includes = ["src/adam_core/"]
excludes = [
  "**/__pycache__/**",
  "**/*.py[cod]",
  "**/*.nbc",
  "**/*.nbi",
  "**/.DS_Store",
]

[tool.uv]
override-dependencies = [
  # adam-assist is tested against this checkout, not the published adam-core
  # version range embedded in the latest adam-assist wheel metadata.
  "adam-core",
]

[tool.uv.sources]
adam-core = { workspace = true }


[tool.pdm.scripts]
check = { composite = ["lint", "typecheck", "test"] }
script-preflight = "python migration/scripts/check_pdm_ci_scripts.py"
wheel-version = "python migration/scripts/write_maturin_version.py"
wheel-build = { composite = [
  "pdm run wheel-version",
  "pdm build --no-sdist --dest dist",
] }
wheel-inspect = "python migration/scripts/check_wheel_artifacts.py dist"
format = { composite = ["black ./src/adam_core", "isort ./src/adam_core"] }
lint = { composite = [
  "ruff check ./src/adam_core",
  "black --check ./src/adam_core",
  "isort --check-only ./src/adam_core",
] }
fix = "ruff check ./src/adam_core --fix"
typecheck = "mypy --strict ./src/adam_core"

test = "pytest --benchmark-skip -m 'not profile' {args}"
doctest = "pytest --doctest-plus --doctest-only"
benchmark = "pytest --benchmark-only {args}"
coverage = "pytest --benchmark-skip --cov=adam_core --cov-report=xml -m 'not profile' {args}"
docs = { cmd = "sphinx-build -b html docs/source docs/build", env = { LC_ALL = "C", LANG = "C" } }
docs-check = { cmd = "sphinx-build -E -b html -W --keep-going docs/source docs/build_ci", env = { LC_ALL = "C", LANG = "C" } }
rust-build = "pdm run wheel-build"
rust-develop = { composite = [
  "python -m ensurepip --upgrade",
  "maturin develop --manifest-path rust/adam_core_py/Cargo.toml --release",
] }
rust-smoke = { composite = [
  "pdm run rust-develop",
  "pytest -q src/adam_core/tests/test_rust_backends.py src/adam_core/utils/tests/test_spice_backend.py src/adam_core/utils/tests/test_spice.py src/adam_core/orbits/tests/test_spice_kernel.py src/adam_core/coordinates/tests/test_rust_covariance_autodiff.py src/adam_core/orbit_determination/tests/test_iod.py",
] }
rust-parity-fuzz = "python -m migration.parity.parity_fuzz --seeds 8 --n 128 --output migration/artifacts/parity_fuzz.json"
rust-parity-main = "python -m migration.parity.parity_main --speed-n 2000 --output migration/artifacts/parity_gate.json"
rust-parity-speed = "python -m migration.parity.parity_speed --n 2000 --reps 7 --output migration/artifacts/parity_speed.json"
rust-parity-speed-cold = "python -m migration.parity.parity_speed --n 2000 --reps 21 --warmup 3 --cold --output migration/artifacts/parity_speed_cold_warm.json"
rust-latency-gate = "python migration/scripts/rust_backend_benchmark_gate.py --repeats 7 --output migration/artifacts/rust_latency_current.json"
rust-perf-gate = "pdm run rust-latency-gate"
test-rust-full = { composite = [
  "pdm run rust-develop",
  "pytest --benchmark-skip -m 'not profile' {args}",
] }
rust-quality = { composite = [
  "cargo fmt --all --check",
  "cargo clippy --workspace --all-targets -- -D warnings",
  "cargo test --workspace",
] }
dev-loop = { composite = [
  "pdm run script-preflight",
  "pdm run lint",
  "pdm run rust-quality",
  "pdm run rust-smoke",
  "pdm run rust-parity-main",
  "pdm run rust-parity-speed-cold",
  "pdm run rust-latency-gate",
] }

[tool.maturin]
manifest-path = "rust/adam_core_py/Cargo.toml"
module-name = "adam_core._rust_native"
python-source = "src"
# Maturin uses rust/adam_core_py/Cargo.toml [package].version for wheel
# metadata. `pdm run wheel-version` mirrors that value into adam_core._version.
include = [{ path = "adam_core/_version.py", format = "wheel" }]
