[metadata]
name = adam_core
version = 0.1.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    astropy
    astroquery
    healpy
    jax
    jaxlib
    numba
    numpy
    pandas
    requests
    scipy
    spiceypy
    quivr>=0.4.1
    naif-de440
    naif-leapseconds

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-benchmark
    pre-commit

[options.package_data]
* = *.csv

[tool.black]
line-length = 110

[flake8]
max_line_length = 110
ignore =
    W503
    E203
exclude =
    build

[isort]
profile = black

[tool:pytest]
# Disable benchmarks by default. Use pytest --benchmark-only to run them.
addopts = --benchmark-skip
