[package]
name = "adam_core_py"
version = "0.5.6"
edition = "2021"

[lib]
name = "_rust_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
ndarray = "0.16"
arrow = { version = "54", features = ["pyarrow"] }
arrow-array = "54"
arrow-ipc = "54"
arrow-schema = "54"
adam_core_rs_coords = { path = "../adam_core_rs_coords" }
adam_core_rs_orbit_determination = { path = "../adam_core_rs_orbit_determination" }
adam_core_rs_spice = { path = "../adam_core_rs_spice" }
