[package]
name = "adam_core_py"
version = "0.5.6"
edition = "2021"

[lib]
name = "_rust_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
ndarray = "0.16"
arrow = { version = "54", features = ["pyarrow"] }
arrow-array = "54"
arrow-ipc = "54"
arrow-schema = "54"
parquet = { version = "54", default-features = false, features = ["arrow", "zstd"] }
serde_json = { version = "1", features = ["preserve_order"] }
pathdiff = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
chrono-tz = "0.10"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
adam_core_rs_coords = { path = "../adam_core_rs_coords" }
adam_core_rs_orbit_determination = { path = "../adam_core_rs_orbit_determination" }
adam_core_rs_spice = { path = "../adam_core_rs_spice" }
