[package]
name = "adam_core_py"
version = "0.5.6-rc.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "_rust_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
ndarray = "0.16"
arrow = { version = "54", features = ["pyarrow"] }
arrow-array = "54"
arrow-ipc = "54"
arrow-schema = "54"
parquet = { version = "54", default-features = false, features = ["arrow", "zstd"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
pathdiff = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
chrono-tz = "0.10"
tzf-rs = { version = "1.3.6", default-features = false, features = ["bundled"] }
ureq = { version = "2.12", default-features = false, features = ["tls"] }
adam_core_rs_coords = { version = "=0.1.0-rc.1", path = "../adam_core_rs_coords" }
adam_core_rs_orbit_determination = { version = "=0.1.0-rc.1", path = "../adam_core_rs_orbit_determination" }
adam_core_rs_spice = { version = "=0.1.0-rc.1", path = "../adam_core_rs_spice" }
