[package]
name = "adam_core_rs_assist"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
publish = false

[features]
default = []
python = ["dep:ndarray", "dep:numpy", "dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
adam_core_rs_coords = { path = "../adam_core_rs_coords" }
adam_core_rs_spice = { path = "../adam_core_rs_spice" }
# Pinned to the same-epoch-multi-particle PR branch (assist-rs PR #11) so we
# can consume assist_propagate_states_same_epoch and the full-precision
# obliquity constants ahead of the next crates.io release. Switch back to a
# crates.io version once the PR is merged and published.
assist-rs = { git = "https://github.com/B612-Asteroid-Institute/assist-rs.git", rev = "f66517aa9b920ad250312aceb28a2635cdb999a5", default-features = false, features = ["parallel"] }
ndarray = { version = "0.16", optional = true }
numpy = { version = "0.22", optional = true }
pyo3 = { version = "0.22", optional = true }
rayon = "1.11"

[dev-dependencies]
serde_json = "1"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
