[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "adam-assist-rust"
version = "0.1.0"
description = "Experimental GPL Rust-backed ASSIST adapter for adam-core benchmarking"
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
dependencies = [
  "adam-core",
  "jpl-small-bodies-de441-n16",
  "naif-de440",
  "numpy",
  "pyarrow",
  "quivr",
]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "adam_assist_rust._native"
python-source = "python"
features = ["python", "extension-module"]
