[package]
name = "adam_core_rs_coords"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.11"
arrow-array = "54"
arrow-buffer = "54"
arrow-schema = "54"
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd"] }
erfars = "0.2"
adam_core_rs_autodiff = { path = "../adam_core_rs_autodiff" }
adam_core_rs_orbit_determination = { path = "../adam_core_rs_orbit_determination" }
# Pure-rust dense linalg with hand-tuned SIMD (NEON, AVX2/512). Used for
# weighted_mean / weighted_covariance GEMV/GEMM and unblocks future
# Cholesky/LU/QR/eigen kernels (sigma-point sampling, ATWA solve, etc.).
faer = "0.22"
# JSON marshalling for the ObsContext render/parse boundary (bead
# personal-cmy.26); preserve_order keeps Python dict insertion order.
serde_json = { version = "1", features = ["preserve_order"] }

[lib]
path = "src/lib.rs"
