[package]
name = "adam_core_rs_spice"
version = "0.1.0-rc.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "SPICE kernel loading, state queries, and SPK products for adam-core"

[dependencies]
adam_core_rs_coords = { version = "=0.1.0-rc.2", path = "../adam_core_rs_coords" }
rayon = "1"
faer = "0.22"
serde_json = "1"
spicekit = "0.2.2"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
